--- a/handler/display/tasks/observer/plan.yaml
+++ b/handler/display/tasks/observer/plan.yaml
@@ -1,9 +1,15 @@
 info_en: "[plan]"
 info_cn: "[查看sql的执行计划]"
-command: obdiag display scene run --scene=observer.plan --env db_connect='-h127.0.0.1 -P2881 -utest@test -p****** -Dtest' --env sqlid=test
+command: obdiag display scene run --scene=observer.plan  --env tenant_name=test --env sqlid=test
+
 task:
   - version: "[4.0.0.0, *]"
     steps:
       - type: sql
-        sql: "SELECT * FROM oceanbase.V$OB_PLAN_CACHE_PLAN_STAT where sql_id = '{sqlid}';"
+        sql: "SELECT a.* FROM oceanbase.GV$OB_PLAN_CACHE_PLAN_STAT a left join oceanbase.__all_tenant b on a.tenant_id=b.tenant_id  where b.tenant_name='{tenant_name}' and a.sql_id = '{sqlid}';"
         global: true
+  - version: "[3.0.0.0, 4.0.0.0]"
+    steps:
+      - type: sql
+        sql: "SELECT a.* FROM oceanbase.GV$plan_cache_plan_stat a left join oceanbase.__all_tenant b on a.tenant_id=b.tenant_id  where b.tenant_name='{tenant_name}' and a.sql_id = '{sqlid}';"
+        global: true 
