--- a/handler/display/tasks/observer/zone_info.yaml
+++ b/handler/display/tasks/observer/zone_info.yaml
@@ -7,3 +7,8 @@ task:
       - type: sql
         sql: "select * from oceanbase.dba_ob_zones;"
         global: true
+  - version: "[3.0.0.0, 4.0.0.0]"
+    steps:
+      - type: sql
+        sql: "select * from oceanbase.__all_zone;"
+        global: true
