--- a/handler/gather/tasks/observer/backup.yaml
+++ b/handler/gather/tasks/observer/backup.yaml
@@ -1,6 +1,6 @@
 info_en: "[backup problem]"
 info_cn: "[数据备份问题]"
-command: obdiag gather scene run --scene=observer.backup
+command: obdiag gather scene run --scene=observer.backup --env "{tenant_id=xxx}"
 task:
   - version: "[2.0.0.0, 4.0.0.0]"
     steps:
@@ -53,7 +53,7 @@ task:
         sql: "select * from oceanbase.__all_rootservice_event_history where gmt_create > ${from_time} and gmt_create < ${to_time} order by gmt_create desc;"
         global: true
       - type: sql
-        sql: "select b.* from oceanbase.__all_virtual_pg_backup_log_archive_status a,oceanbase.__all_virtual_pg_log_archive_stat b where a.table_id=b.table_id and a.partition_id=b.partition_id  order by log_archive_cur_ts limit 5;"
+        sql: "select b.* from oceanbase.__all_virtual_pg_backup_log_archive_status a,oceanbase.__all_virtual_pg_log_archive_stat b where a.table_id=b.table_id and a.partition_id=b.partition_id  order by log_archive_cur_ts limit 100;"
         global: true
       - type: log
         global: false
@@ -103,22 +103,22 @@ task:
         sql: "show parameters like '%ha_low_thread_score%';"
         global: true
       - type: sql
-        sql: "SELECT * FROM oceanbase.CDB_OB_BACKUP_PARAMETER"
+        sql: "SELECT * FROM oceanbase.CDB_OB_BACKUP_PARAMETER where tenant_id = ${tenant_id}"
         global: true
       - type: sql
-        sql: "SELECT * FROM oceanbase.CDB_OB_BACKUP_JOBS limit 20;"
+        sql: "SELECT * FROM oceanbase.CDB_OB_BACKUP_JOBS where tenant_id = ${tenant_id};"
         global: true
       - type: sql
         sql: "SELECT * FROM oceanbase.DBA_OB_ROOTSERVICE_EVENT_HISTORY WHERE module='backup_data' AND event ='start_backup_data';"
         global: true
       - type: sql
-        sql: "SELECT * FROM oceanbase.CDB_OB_BACKUP_TASKS limit 20;"
+        sql: "SELECT * FROM oceanbase.CDB_OB_BACKUP_TASKS where tenant_id = ${tenant_id};"
         global: true
       - type: sql
-        sql: "SELECT * FROM oceanbase.__all_virtual_backup_schedule_task limit 20"
+        sql: "SELECT * FROM oceanbase.__all_virtual_backup_schedule_task where tenant_id = ${tenant_id}"
         global: true
       - type: sql
-        sql: "SELECT * from oceanbase.CDB_OB_BACKUP_JOB_HISTORY where STATUS = 'FAILED' limit 20;"
+        sql: "SELECT * from oceanbase.CDB_OB_BACKUP_JOB_HISTORY where STATUS = 'FAILED' and tenant_id = ${tenant_id};"
         global: true
       - type: log
         global: false
