--- a/.github/workflows/build_package.yml
+++ b/.github/workflows/build_package.yml
@@ -18,7 +18,9 @@ jobs:
       image: "oceanbase/obdiag-builder:latest"
 
     steps:
-
+      - name: Checkout code
+        uses: actions/checkout@v3
+        
       - name: Install dependencies
         run: |
           export PATH=/opt/miniconda3/bin:$PATH
@@ -59,7 +61,9 @@ jobs:
     runs-on: ubuntu-22.04
 
     steps:
-
+      - name: Checkout code
+        uses: actions/checkout@v3
+        
       - name: Download RPM Artifact
         uses: actions/download-artifact@v3
         with:
