--- a/.github/workflows/build_package.yml
+++ b/.github/workflows/build_package.yml
@@ -9,6 +9,8 @@ on:
       - master
 env:
   ACTIONS_ALLOW_USE_UNSECURE_NODE_VERSION: true
+  ACTIONS_RUNNER_FORCED_INTERNAL_NODE_VERSION: node16
+  ACTIONS_RUNNER_FORCE_ACTIONS_NODE_VERSION: node16
 
 jobs:
   build-rpm:
