--- a/.github/workflows/build_package.yml
+++ b/.github/workflows/build_package.yml
@@ -22,6 +22,10 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+        run: |
+          cd $RUNNER_HOME/actions-runner/externals
+          mv node20 node20.bak
+          ln -s node16 node20
         
       - name: Install dependencies
         run: |
