--- a/.github/workflows/build_package.yml
+++ b/.github/workflows/build_package.yml
@@ -18,14 +18,12 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: "oceanbase/obdiag-builder:latest"
+    env:
+      ACTIONS_ALLOW_USE_UNSECURE_NODE_VERSION: true 
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-        run: |
-          cd $RUNNER_HOME/actions-runner/externals
-          mv node20 node20.bak
-          ln -s node16 node20
         
       - name: Install dependencies
         run: |
