--- a/handler/checker/tasks/observer/column_storage/tenant_parameters.yaml
+++ b/handler/checker/tasks/observer/column_storage/tenant_parameters.yaml
@@ -1,4 +1,4 @@
-info: 'Check whether there is any observer have CPU oversold.'
+info: 'Check for column storage poc on tenant parameters.'
 task:
   - version: "[4.3.1.0,*]"
     steps:
