--- a/.github/workflows/build_package.yml
+++ b/.github/workflows/build_package.yml
@@ -22,11 +22,16 @@ jobs:
       ACTIONS_ALLOW_USE_UNSECURE_NODE_VERSION: true 
 
     steps:
-      - name: checkout fix
+      - name: Run on old node
         run: |
-          cd $RUNNER_HOME/actions-runner/externals
-          mv node20 node20.bak
-          ln -s node16 node20
+          sudo yum update -y
+          sudo yum install -y wget
+          touch "$HOME/.bashrc"
+          wget -qO- https://raw.githubusercontent.com/nvm-sh/nvm/v0.40.1/install.sh | bash
+          export NVM_DIR="$HOME/.nvm"
+          [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"
+          nvm install 16
+          
       - name: Checkout code
         uses: actions/checkout@v3
         
