--- a/.github/workflows/build_package.yml
+++ b/.github/workflows/build_package.yml
@@ -30,7 +30,8 @@ jobs:
           wget -qO- https://raw.githubusercontent.com/nvm-sh/nvm/v0.40.1/install.sh | bash
           export NVM_DIR="$HOME/.nvm"
           [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"
-          nvm install 16
+          nvm uninstall 20
+          nvm install 14
           
       - name: Checkout code
         uses: actions/checkout@v3
