--- a/.github/workflows/build_package.yml
+++ b/.github/workflows/build_package.yml
@@ -26,6 +26,7 @@ jobs:
         run: |
           yum install curl -yyq
           curl -LO https://unofficial-builds.nodejs.org/download/release/v20.9.0/node-v20.9.0-linux-x64-glibc-217.tar.xz
+          mkdir /node20217
           tar -xf node-v20.9.0-linux-x64-glibc-217.tar.xz --strip-components 1 -C /node20217
           ldd /__e/node20/bin/node
           
