--- a/.github/workflows/build_dev_docker.yml
+++ b/.github/workflows/build_dev_docker.yml
@@ -21,6 +21,12 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
+      - name: Log in to Docker hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
       - name: Log in to Quay io
         uses: docker/login-action@v3
         with:
