--- a/.github/workflows/build_dev_docker.yml
+++ b/.github/workflows/build_dev_docker.yml
@@ -35,4 +35,4 @@ jobs:
           file: Dockerfile
           push: true
           tags: |
-            ${{ vars.DOCKER_PUSH_BASE }}/obdiag-builder:latest
+            ${{ vars.DOCKER_PUSH_BASE }}/obdiag-builder:dev
